# pyannote-ggml

./: .gitignore  .gitmodules  AGENTS.md  CHAPTER4_ACADEMIC.md  CUDA_CONTEXT.md  DEPLOYMENT_ZH.md  DIARIZATION_WHISPER_INTEGRATION_ZH.md  INTEGRATION_PLAN_ZH.md  METAL_RUNBOOK.md  SEG_CUDA_ENV_VARS.md  notes-cudnn-experiment.md  session-2026-03-02-archive.md  session-changshigpu.md  session-ses_3572_huijia.md  session-ses_35b4.md  session-论文.md
diarization-ggml/: CMakeLists.txt  test.txt
diarization-ggml/include/: diarization.h
diarization-ggml/src/: clustering.cpp  diarization.cpp  main.cpp  main_transcribe.cpp  model_cache.cpp  model_cache.h  offline_pipeline.cpp  offline_pipeline.h  pipeline.cpp  plda.cpp  streaming.cpp  streaming.h  streaming_state.h  vbx.cpp
diarization-ggml/tests/: test_streaming.cpp
docs/: context_segmentation_cuda_bottleneck_summary.md  coreml_and_ggml_backend_notes.md  coreml_segmentation_implementation.md  cuda_benchmark_results.md  cuda_embedding_correctness_fix.md  cuda_fbank_precompute_optimization.md  cuda_pipeline_parallel_optimization.md  cuda_sync_overhead_optimization.md  markdown_index.md  markdown_index_zh.md  metal_coreml_optimizations.md  operator_level_optimizations.md  operator_level_optimizations_fullflow.md  optimization_paper_notes.md  paper_cuda_bilstm_optimization_notes_zh.md  paper_cuda_embedding_optimization_notes_zh.md  seg_cuda_gap_analysis.md  segmentation_cuda_lstm_coop_route.md  segmentation_cuda_lstm_parallel_optimization.md  segmentation_cuda_lstm_switches_zh.md  segmentation_cuda_lstm_t4_optimizations.md  thesis_ch4_ch5_materials_to_extract.md  thesis_structure.md
models/embedding-ggml/: CMakeLists.txt  convert_coreml.py
models/embedding-ggml/src/: fbank.cpp  fbank.h  main.cpp  model.cpp  model.h
models/embedding-ggml/src/coreml/: coreml_bridge.h  coreml_bridge.mm
models/segmentation-ggml/: CMakeLists.txt  convert_coreml.py
models/segmentation-ggml/src/: lstm.cpp  lstm.h  main.cpp  model.cpp  model.h  sincnet.cpp
models/segmentation-ggml/src/coreml/: segmentation_coreml_bridge.h  segmentation_coreml_bridge.mm
patches/whisper.cpp/: 0001-cuda-add-pyannote-seg-LSTM-custom-op-fast-path.patch  0001-whisper-ggml-cuda-pool1d-and-binbcast-fix.patch  0002-whisper-ggml-cuda-pyannote-seg-custom-op.patch  0003-ggml-cuda-cudnn-lstm-experiment.patch
tools/: bench_coreml_compute_units.sh  bench_pipeline_optimization.sh  build-linux-cpu.sh  build-linux-cuda.sh  build-macos-cpu.sh  build-macos-metal.sh  build-windows-cpu.ps1  build-windows-cuda.ps1  compare-seg-dumps.py  run-diarization.sh  run-trans.sh
whisper.cpp-porting/: whisper.cpp_changes_871a7a07e27e57c10d8dfad6f9babff4d3fa0d29_to_HEAD.patch  whisper.cpp_commits_871a7a07e27e57c10d8dfad6f9babff4d3fa0d29_to_HEAD.txt  whisper.cpp_files_871a7a07e27e57c10d8dfad6f9babff4d3fa0d29_to_HEAD.txt
